# unumber

./: CMakeLists.txt  LICENSE  README.md  mkdocs.yaml
cmake/: FindGMP.cmake  bignumberConfig.cmake.in
docs/: changelog.md  contributing.md  faq.md  index.md  license.md
docs/getting-started/: cmake.md  installation.md  quickstart.md
docs/guides/: modular.md  parsing-formatting.md  primes-random.md  rounding-scale.md
docs/reference/: compat.md  errors.md  gmp-interop.md
docs/types/: bigdecimal.md  bigfloat.md  biginteger.md  bigmatrix.md  bigmodular.md  bigrational.md
examples/: main.cpp
include/unumber/decimal/: BigDecimal.h
include/unumber/float/: BigFloat.h
include/unumber/integer/: BigInteger.h
include/unumber/matrix/: BigMatrix.h
include/unumber/modular/: BigModular.h
include/unumber/rational/: BigRational.h
src/unumber/decimal/: BigDecimal.cpp
src/unumber/float/: BigFloat.cpp
src/unumber/integer/: BigInteger.cpp
src/unumber/matrix/: BigMatrix.cpp
src/unumber/modular/: BigModular.cpp
src/unumber/rational/: BigRational.cpp
